Completely Redesigned Sidebar - No longer using Spectre's CSS sidebar, there were too many page sizing issues. - Now using my own design; Similar to the chat sidebar - Sidebar no longer completely collapses, it shrinks to an icon only sidebar - Fixed some of the sizing of pages now that the sizing issue seems to be fixed!

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,11 +36,12 @@ $secondary-light: hsla(236%, 11%, 71%, 1);
 $border-round: 10px;
 $border-rounder: 16px;
 
-$content-height: calc(100%-52px);
+// SIZING
+$nav-height: 60px;
+$content-height: calc(100% - #{$nav-height});
 
 /*
   SPECTRE CSS COLOR OVERRIDES
  */
-
 $error-color: #cf4545;
 $success-color: #32b643;
